# ebcl_build_tools

./: .gitignore  README.md  antora-playbook.yml  book.toml  build_tools.code-workspace  dev-requirements.txt  ebcl_build_tools.code-workspace  init_workspace  install_extensions  package-lock.json  package.json  pyproject.toml  setup_workspace  test.sh
.devcontainer/: Dockerfile  devcontainer.json  init.sh
.github/: pull_request_template.md
.github/workflows/: mdbook.yml  publish.yml  python-app.yml
debian/: .gitignore  changelog  control  copyright  rules
docs/: README.md  SUMMARY.md  antora.yml  boot_generator.md  build_docs.sh  common.md  hypervisor_config.md  initrd_generator.md  install_dependencies.sh  root_generator.md
docs/assets/: hv_overview.drawio
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: boot.adoc  build_tools.adoc  changelog.adoc  common.adoc  contributing.adoc  core.adoc  downloader.adoc  helper_tools.adoc  hypervisor.adoc  index.adoc  initrd.adoc  proxy.adoc  root.adoc
ebcl/: __init__.py
ebcl/common/: __init__.py  apt.py  cache.py  config.py  deb.py  deb_metadata.py  dependency.py  fake.py  files.py  proxy.py  templates.py  version.py
ebcl/common/types/: build_type.py  cpu_arch.py  environment_type.py  image_type.py
ebcl/tools/boot/: boot.py
ebcl/tools/core/: core.py
ebcl/tools/downloader/: downloader.py
ebcl/tools/hypervisor/: config_gen.py  model.py  model_gen.py  schema_loader.py  vbus_gen.py  vbus_lib_gen.py
ebcl/tools/hypervisor/data/: io.cfg.j2  model.schema.json  modules.list.j2  schema.yaml
ebcl/tools/hypervisor/test/: VM-IMX95.dts
ebcl/tools/initrd/: init.sh  initrd.py
ebcl/tools/proxy/: proxy.py
ebcl/tools/root/: __init__.py  debootstrap.py  elbe.py  kiwi.py  multistrap.cfg  root.py  root.xml  root_config.py
ebcl/tools/secure_aptrepo/: .secure_repo.py.swo  .secure_repo.py.swp
libapt/: README.md  pyproject.toml
libapt/src/libapt/: __init__.py  apt.py  cache.py  deb.py  deb_metadata.py  fake.py  files.py  proxy.py
libapt/src/libapt/types/: __init__.py  cpu_arch.py
libapt/tests/: test_apt.py  test_cache.py  test_deb.py  test_fake.py  test_files.py  test_proxy.py  test_version.py
libyamlconf/: README.md  pyproject.toml
libyamlconf/src/libyamlconf/: __init__.py  config.py
robot_tests/: boot.robot  initrd.robot  root.robot
robot_tests/data/: boot.yaml  initrd.yaml  root.yaml  root_config_chroot.sh  root_config_sudo.sh
robot_tests/data/config/: elosd.json
robot_tests/lib/: Boot.py  Fakeroot.py  Initrd.py  Root.py
tests/: test_apt.py  test_boot.py  test_cache.py  test_common.py  test_config.py  test_credential.py  test_credentials.py  test_deb.py  test_downloader.py  test_fake.py  test_files.py  test_initrd.py  test_proxy.py  test_root.py  test_version.py
tests/data/: boot.yaml  config_boot.sh  data.tar.zst  initrd.yaml  initrd_noble.yaml  initrd_with_flat.yaml  repo_local.yaml  repo_local_debootrap.yaml  root.yaml  root_debootstrap.yaml  root_distro.yaml  root_kiwi_berry.yaml  root_kiwi_debo.yaml  root_multistrap.yaml  root_sysroot.yaml
tests/data/config/etc/apt/preferences.d/: linux.elektrobit.com
tests/data/config5/preferences.d/: aptconfig5
tests/data/credentials_repo/: .gitignore  Makefile  repo_server.py
tests/data/credentials_repo/auth.d/: credentials.conf
tests/data/credentials_repo/cred-test-package/: cred_test.txt
tests/data/credentials_repo/cred-test-package/DEBIAN/: control
tests/data/example_packages/: Makefile  control.in  example_1+1.0_all.deb  example_1+1.0_amd64.deb  example_1+1.0_arm64.deb  example_1.0-10z_all.deb  example_1.0-10z_amd64.deb  example_1.0-10z_arm64.deb  example_1.0-1a_all.deb  example_1.0-1a_amd64.deb  example_1.0-1a_arm64.deb  example_1.0-1z_all.deb  example_1.0-1z_amd64.deb  example_1.0-1z_arm64.deb  example_1.0_all.deb  example_1.0_amd64.deb  example_1.0_arm64.deb  example_1.1_all.deb  example_1.1_amd64.deb  example_1.1_arm64.deb  example_2.0_all.deb  example_2.0_amd64.deb  example_2.0_arm64.deb
tests/data/flat_repo/: InRelease  Makefile  Packages  Packages.xz  credential_repo_setup  secure_repo.py
tests/data/flat_repo/auth.d/: good.conf  without_http.conf  wrong.conf
tests/hypervisor/: test_config_gen.py  test_model.py  test_model_gen.py  test_schema_loader.py
tests/hypervisor/data/: include_a.yaml  include_a_a.yaml  include_a_b.yaml  include_b.yaml  include_b_a.yaml  include_test.yaml  missing_include.yaml  test_devices.yaml  test_missing_shms.yaml  test_shms.yaml  test_undefined_vbus.yaml  test_virtio_block_multiple_clients.yaml  test_virtio_block_multiple_servers.yaml  test_virtio_blocks.yaml  test_vms.yaml  test_vnet_too_many_users.yaml  test_vnets.yaml
tests/hypervisor/data/examples/qemu_ebclfsa/expected/: init.ned  io.cfg  modules.list
tests/hypervisor/data/examples/qemu_ebclfsa/extension/: init.ned.j2  modules.list.j2  schema.yaml
tests/hypervisor/data/examples/test_empty/expected/: io.cfg  modules.list
tests/hypervisor/data/examples/test_extension/: config.yaml
tests/hypervisor/data/examples/test_extension/expected/: io.cfg  modules.list  system.lua  vm.dump
tests/hypervisor/data/examples/test_extension/extension/: model.py  schema.yaml  vm.dump.j2
tests/hypervisor/data/extension_missing_root/: schema.yaml
tests/hypervisor/data/extension_missing_template/: schema.yaml
tests/hypervisor/data/extension_missing_version/: schema.yaml
tests/hypervisor/data/extension_model/: model.py
tests/hypervisor/data/extension_model_invalid_base/: model.py
tests/hypervisor/data/extension_undefined_class/: schema.yaml
tests/hypervisor/data/test_packages/: InRelease  Makefile  Packages  Packages.xz  changelog.in  test-ebclfsa.deb  test-empty.deb  test-multiple.deb  test-simple.deb
