[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ebcl/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ebcl"]

[project]
name = "ebcl"
dynamic = ["version"]

authors = [
  { name="Elektrobit GmbH", email="info@elektrobit.com" },
]
description = "EBcL build helpers."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyyaml",
    "jsonpickle",
    "unix_ar",
    "zstandard",
    "jinja2",
    "typing_extensions"
]

[project.urls]
Homepage = "https://github.com/Elektrobit/ebcl_template"

[project.scripts]
boot_generator = "ebcl.tools.boot.boot:main"
initrd_generator = "ebcl.tools.initrd.initrd:main"
root_generator = "ebcl.tools.root.root:main"
root_configurator = "ebcl.tools.root.root_config:main"
package_downloader = "ebcl.tools.downloader.downloader:main"
hypervisor_config = "ebcl.tools.hypervisor.config_gen:main"


[tool.pylint.format]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "E0402",
    "W0212",
    "W0718"
]

[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = ""
testpaths = [ "tests" ]
markers = [
    "dev_container: tests requiring tools only avaiable in the dev container, e.g. kiwi-ng.",
    "requires_download: tests requiring downloads form public resources, which is not allowed for GH actions",
]
log_level = "debug"

[tool.coverage.paths]
source = [
    "ebcl",
    "*/site-packages/ebcl"
]

[tool.coverage.run]
branch = true
source = ["ebcl"]

[tool.coverage.report]
include_namespace_packages = true
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "def __repr__"
]
include = ["ebcl/*"]

[tool.coverage.html]
show_contexts = true


[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
explicit_package_bases = true

[tool.flake8]
ignore = ['C901']
per-file-ignores = [
    'ebcl/common/dependency.py:F841',
    'ebcl/tools/proxy/proxy.py:F841',
    'ebcl/tools/root/debootstrap.py:W503',
]
count = true
statistics = true
max-line-length = 120
exclude = '.venv'
